--- a/ApiPilotosF1/appsettings.json
+++ b/ApiPilotosF1/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "https://0.0.0.0:7244"
+      }
+    }
+  }
 }
